<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".core.Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/login_bg_center">


    </LinearLayout>

    <ImageView
        android:id="@+id/imV_top"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/login_bg_top" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginVertical="10sp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="@font/ex_akaya_telivigala"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/imV_gray"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="250dp"
                android:paddingHorizontal="40dp"
                android:paddingVertical="20dp"
                android:background="@drawable/login_bg_gray"
                android:backgroundTint="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10sp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPassword"
                        android:hint="@string/password">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/forgot"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:textColor="@color/blue">
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="60dp"
                    android:gravity="center"
                    android:text="@string/suggest"
                    android:textSize="14sp">
                </TextView>

                <TextView
                    android:id="@+id/register_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/register_now"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/blue">
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:paddingHorizontal="30dp"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:backgroundTint="@color/green"
                    android:text="@string/login"
                    android:textSize="20sp"/>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/green"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
