<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".core.ForgotPassword">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imV_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:srcCompat="@drawable/icon_back" />

        <TextView
            android:id="@+id/textView"
            android:layout_weight="0.8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/forgot"
            android:textSize="30dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:background="@color/white"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                app:cardCornerRadius="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="30dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_get_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:backgroundTint="@color/green"
                    android:text="@string/get_password"
                    android:textSize="20sp"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:orientation="vertical"
                android:gravity="center">



                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>