<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".core.ChangePassword">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imV_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:srcCompat="@drawable/icon_back" />

        <TextView
            android:id="@+id/textView"
            android:layout_weight="0.8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/change_password"
            android:textSize="30dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:background="@color/white"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@color/white"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:id="@+id/imV_gray"
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:layout_marginLeft="0dp"
                    android:orientation="vertical"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="20dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/pw_old"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="MissingConstraints">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_old_password"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:hint="@string/old_password"
                                android:inputType="textPassword" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <ImageView
                            android:id="@+id/imV_eye1"
                            android:layout_width="40dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/icon_unhide"
                            app:layout_constraintBottom_toBottomOf="@id/pw_old"
                            app:layout_constraintEnd_toEndOf="@id/pw_old"
                            app:layout_constraintTop_toTopOf="@id/pw_old"
                            app:layout_constraintVertical_bias="0.5" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/pw_new"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="MissingConstraints">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_new_password"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:hint="@string/new_password"
                                android:inputType="textPassword" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <ImageView
                            android:id="@+id/imV_eye2"
                            android:layout_width="40dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/icon_unhide"
                            app:layout_constraintBottom_toBottomOf="@id/pw_new"
                            app:layout_constraintEnd_toEndOf="@id/pw_new"
                            app:layout_constraintTop_toTopOf="@id/pw_new"
                            app:layout_constraintVertical_bias="0.5" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/pw_new_ag"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="MissingConstraints">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_new_password_again"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:hint="@string/new_password_again"
                                android:inputType="textPassword" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <ImageView
                            android:id="@+id/imV_eye3"
                            android:layout_width="40dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/icon_unhide"
                            app:layout_constraintBottom_toBottomOf="@id/pw_new_ag"
                            app:layout_constraintEnd_toEndOf="@id/pw_new_ag"
                            app:layout_constraintTop_toTopOf="@id/pw_new_ag"
                            app:layout_constraintVertical_bias="0.5" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="35dp"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:backgroundTint="@color/green"
                    android:text="@string/change_password"
                    android:textSize="20sp"/>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>